--- a/aboutme.html
+++ b/aboutme.html
@@ -82,7 +82,7 @@
 <br>
 <p><center><strong>PROGRAMME CODE: IM245 - BACHELOR OF INFORMATION SCIENCE (HONS.) SYSTEM MANAGEMENT</p></center></strong>
 <br>
-<p><center><strong>FACULTY: COLEGE OF COMPUTING, INFORMATICS AND MEDIA</p></center></strong>
+<p><center><strong>FACULTY: COLLEGE OF COMPUTING, INFORMATICS AND MEDIA</p></center></strong>
 <br>
 <p><center><strong>PROGRAMME CODE: IM245 - BACHELOR OF INFORMATION SCIENCE (HONS.) SYSTEM MANAGEMENT</p></center></strong>
 <br>
