--- a/aboutme.html
+++ b/aboutme.html
@@ -88,7 +88,7 @@
 <br>
 <p><center><strong>SUBMISSION DATE: 26 JANUARY 2023 </p></center></strong>
 <br>
-<p><center><strong>PUBLISH URL:</p></center></strong>
+<p><center><strong>PUBLISH URL:https://rumah-barkat-johor.netlify.app/</p></center></strong>
 <br>
 <center><img src="images/unis pic.jpg" width="180" height="180"></center>
 <br>
